<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/ButtonExercise"
    android:layout_height="match_parent"
    tools:context=".ButtonExercise">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Close" />

        <Button
            android:id="@+id/btnToast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Toast" />

        <Button
            android:id="@+id/btnChangeBG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Change_BG" />

        <Button
            android:id="@+id/btnChangeBtnBG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Change_Button_BG" />

        <Button
            android:id="@+id/btnDisappear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Disappear" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>